--- a/MainWindow.ui
+++ b/MainWindow.ui
@@ -30,7 +30,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>140</y>
+       <y>190</y>
        <width>101</width>
        <height>22</height>
       </rect>
@@ -43,7 +43,7 @@
      <property name="geometry">
       <rect>
        <x>10</x>
-       <y>190</y>
+       <y>150</y>
        <width>101</width>
        <height>23</height>
       </rect>
@@ -65,7 +65,7 @@
       <string>显示直方图</string>
      </property>
     </widget>
-    <widget class="QPushButton" name="binaryBtn">
+    <widget class="QPushButton" name="otsuBtn">
      <property name="geometry">
       <rect>
        <x>10</x>
@@ -75,7 +75,20 @@
       </rect>
      </property>
      <property name="text">
-      <string>显示二值图</string>
+      <string>OTSU二值化</string>
+     </property>
+    </widget>
+    <widget class="QPushButton" name="entBtn">
+     <property name="geometry">
+      <rect>
+       <x>10</x>
+       <y>310</y>
+       <width>101</width>
+       <height>23</height>
+      </rect>
+     </property>
+     <property name="text">
+      <string>ENTRPY二值化</string>
      </property>
     </widget>
    </widget>
@@ -99,7 +112,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QGraphicsView" name="binaryView">
+   <widget class="QGraphicsView" name="otsuView">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -109,7 +122,7 @@
      </rect>
     </property>
    </widget>
-   <widget class="QGraphicsView" name="graphicsView_4">
+   <widget class="QGraphicsView" name="entropyView">
     <property name="geometry">
      <rect>
       <x>460</x>
@@ -119,20 +132,20 @@
      </rect>
     </property>
    </widget>
-   <widget class="QLabel" name="Title">
+   <widget class="QLabel" name="sourceLb">
     <property name="geometry">
      <rect>
       <x>130</x>
       <y>10</y>
-      <width>54</width>
-      <height>12</height>
+      <width>71</width>
+      <height>16</height>
      </rect>
     </property>
     <property name="text">
-     <string>Source</string>
+     <string>SourceImg</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label">
+   <widget class="QLabel" name="hisLb">
     <property name="geometry">
      <rect>
       <x>460</x>
@@ -145,7 +158,7 @@
      <string>Histogram</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_3">
+   <widget class="QLabel" name="otsuLb">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -155,10 +168,10 @@
      </rect>
     </property>
     <property name="text">
-     <string>Binary</string>
+     <string>OTSU</string>
     </property>
    </widget>
-   <widget class="QLabel" name="label_4">
+   <widget class="QLabel" name="entLb">
     <property name="geometry">
      <rect>
       <x>460</x>
@@ -168,7 +181,7 @@
      </rect>
     </property>
     <property name="text">
-     <string>BLANK</string>
+     <string>ENTEOPY</string>
     </property>
    </widget>
   </widget>
